--- a/index.ipynb
+++ b/index.ipynb
@@ -4,10 +4,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "os\n"
+     ]
+    }
+   ],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from nbdev_template.core import *"
    ]
   },
   {
